Add failsafe plugin