@@ -110,6 +110,28 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <argLine>
+                        --add-modules=jdk.incubator.vector
+                        --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                        --enable-preview
+                        --enable-native-access=ALL-UNNAMED
+                        --add-exports java.base/jdk.internal.vm.vector=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.honton.chas</groupId>
                 <artifactId>license-maven-plugin</artifactId>
                 <configuration>
